# senile_ant_simulator

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  set_perf_args.sh
.github/: pages_deploy.yml
.github/workflows/: pages_deploy.yml  rust_build.yml
ant_sim_save/: Cargo.toml
ant_sim_save/src/: lib.rs  save_io.rs  save_subsystem.rs
ant_sim_saves/: ant_sim_test_state.txt
benches/: ant_bench.rs  sim_bench.rs
eframe-frontend/: Cargo.toml  index.html
eframe-frontend/assets/: sw.js
eframe-frontend/src/: app.rs  app_event_handling.rs  app_services.rs  channel_actor.rs  lib.rs  load_file_service.rs  main.rs  service_handle.rs  sim_computation_service.rs  sim_update_service.rs  time_polyfill.rs
eframe_frontend/: Cargo.toml
eframe_frontend/src/: app.rs  app_event_handling.rs  app_services.rs  lib.rs  load_file_service.rs  main.rs  sim_update_service.rs  time_polyfill.rs
frontend_pixels_winit/: Cargo.toml
frontend_pixels_winit/src/: main.rs
frontend_recording/: Cargo.toml
frontend_recording/src/: main.rs  write_service.rs
notan_frontend/: Cargo.toml
notan_frontend/src/: app_state.rs  main.rs
recorder/: Cargo.toml
recorder/src/: gif_pix_mapping.rs  gif_recorder.rs  lib.rs
rgba_adapter/: Cargo.toml
rgba_adapter/src/: comp_image.rs  lib.rs
src/: ant_sim.rs  ant_sim_ant.rs  ant_sim_frame.rs  ant_sim_frame_impl.rs  ant_sim_frame_impl2.rs  lib.rs  main.rs
