[package]
name = "ant_sim"
version = "1.0.0"
edition = "2021"

[workspace]
members = ["frontend_pixels_winit", "ant_sim_save", "recorder","frontend_recording", "notan_frontend", "rgba_adapter", "eframe-frontend"]

[lib]
crate-type = ["rlib"]

[[bench]]
name="ant_bench"
harness=false

[dependencies]
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.4"