[package]
name = "eframe-frontend"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
egui = "0.19.0"
egui_extras = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence

ant_sim = {path = ".."}
ant_sim_save = { path = "../ant_sim_save" }
rgba_adapter = { path = "../rgba_adapter" }

log = "0.4.17"
async-std = "1.12.0"
async-trait = "0.1.57"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
simple_logger = "2.3.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
console_log = "0.2.0"
web-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"

[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
