[package]
name = "frontend_pixels_winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ant_sim = { path = ".." }
ant_sim_save = { path = "../ant_sim_save"}
pixels = "0.9"
winit = "0.27"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4.22"