[package]
name = "frontend_recording"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2" , features = ["derive"]}
console = "0.15"
ant_sim = { path = ".." }
recorder = { path = "../recorder" }
ant_sim_save = { path = "../ant_sim_save" }