[package]
name = "notan_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = "0.7.0"
web-sys = "0.3.60"
ant_sim = { path = ".." }
ant_sim_save = { path = "../ant_sim_save" }
rgba_adapter = { path = "../rgba_adapter" }